--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "node-module": "^2.0.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
